[gd_scene load_steps=10 format=2]

[ext_resource path="res://Fontes/Minecraftia-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Sprites/SatelliteTask/Verde.png" type="Texture" id=2]
[ext_resource path="res://Sprites/SatelliteTask/TASKCOMPLETA.png" type="Texture" id=3]
[ext_resource path="res://Scripts/SatelliteTask.gd" type="Script" id=4]
[ext_resource path="res://Sprites/SatelliteTask/Laranja.png" type="Texture" id=5]
[ext_resource path="res://Sprites/SatelliteTask/Azul.png" type="Texture" id=6]
[ext_resource path="res://Sprites/SatelliteTask/Rosa.png" type="Texture" id=7]
[ext_resource path="res://Sprites/SatelliteTask/task.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 8
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="SatelliteTask" type="Node2D"]
show_behind_parent = true
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [ 25.0 ]
}

[node name="Control" type="Control" parent="."]
margin_right = 639.0
margin_bottom = 362.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next_button" type="Button" parent="Control"]
show_behind_parent = true
margin_left = 289.0
margin_top = 262.0
margin_right = 339.0
margin_bottom = 315.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start_transmission_button" type="Button" parent="Control"]
visible = false
margin_left = 292.0
margin_top = 263.0
margin_right = 342.0
margin_bottom = 316.0
disabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close_button" type="Button" parent="Control"]
margin_left = 323.0
margin_top = 21.0
margin_right = 348.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 321, 182 )
texture = ExtResource( 8 )
hframes = 2

[node name="Description" type="RichTextLabel" parent="."]
margin_left = 48.0
margin_top = 213.0
margin_right = 279.0
margin_bottom = 340.0
rect_pivot_offset = Vector2( -45, -209 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "Nossos serviços de internet das coisas foi desconectado em razão da mudança de banda programada. Sintonize o canal correto para fazer nossos sistemas inteligentes voltarem a funcionar como deveriam. A cidade encontra-se paralizada em virtude disso, e todos os sensores interromperam a sua transmissão de dados."
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Terminal" type="RichTextLabel" parent="."]
margin_left = 403.0
margin_top = 22.0
margin_right = 612.0
margin_bottom = 344.0
rect_pivot_offset = Vector2( 499, -85 )
custom_colors/default_color = Color( 0.286275, 0.85098, 0.231373, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "Buscando...
Servidor 1 não encontrado.
Buscando...
Servidor 2 não encontrado.
Buscando...
Servidor 3 não encontrado.
Buscando...
Servidor 4 não encontrado.

Analisando pacotes de dados...
Transferindo arquivos...
4kB completos - 5%
12kB completos - 15%
48kB completos - 60%
52kB completos - 65%
80kB completos - 100%

Abrindo log...

Iniciando procedimento de verificação...

Resultado: transmissão do sinal de internet danificado. Ação manual requerida: alinhamento de satélites.

>"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Final_message" type="RichTextLabel" parent="."]
visible = false
margin_left = 397.0
margin_top = 117.0
margin_right = 606.0
margin_bottom = 353.0
rect_pivot_offset = Vector2( -250, -36 )
custom_colors/default_color = Color( 0.286275, 0.85098, 0.231373, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "Reestabelecendo conexões dos servidores...

Conectando ao servidor 1...
Servidor 1 conectado - one.sun.industries.br
Conectando ao servidor 2...
Servidor 2 conectado - two.sun.industries.br
Conectando ao servidor 3...
Servidor 3 conectado - three.sun.industries.br
Conectando ao servidor 4...
Servidor 4 conectado - four.sun.industries.br

Sistemas reestabelecidos!"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Waiting_transmission_message" type="RichTextLabel" parent="."]
visible = false
margin_left = 397.0
margin_top = 90.0
margin_right = 606.0
margin_bottom = 105.0
rect_pivot_offset = Vector2( -250, -36 )
custom_colors/default_color = Color( 0.286275, 0.85098, 0.231373, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "Aguardando início da transmissão..."
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Satellite4_status_message" type="RichTextLabel" parent="."]
visible = false
margin_left = 397.0
margin_top = 69.0
margin_right = 606.0
margin_bottom = 84.0
rect_pivot_offset = Vector2( 499, -85 )
custom_colors/default_color = Color( 0.286275, 0.85098, 0.231373, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "Canal 4 sintonizado com sucesso."
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Satellite3_status_message" type="RichTextLabel" parent="."]
visible = false
margin_left = 397.0
margin_top = 57.0
margin_right = 606.0
margin_bottom = 72.0
rect_pivot_offset = Vector2( 499, -85 )
custom_colors/default_color = Color( 0.286275, 0.85098, 0.231373, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "Canal 3 sintonizado com sucesso."
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Satellite2_status_message" type="RichTextLabel" parent="."]
visible = false
margin_left = 397.0
margin_top = 46.0
margin_right = 606.0
margin_bottom = 61.0
rect_pivot_offset = Vector2( 499, -85 )
custom_colors/default_color = Color( 0.286275, 0.85098, 0.231373, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "Canal 2 sintonizado com sucesso."
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Satellite1_status_message" type="RichTextLabel" parent="."]
visible = false
margin_left = 397.0
margin_top = 33.0
margin_right = 606.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 499, -85 )
custom_colors/default_color = Color( 0.286275, 0.85098, 0.231373, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "Canal 1 sintonizado com sucesso."
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Waiting_adjustments_message" type="RichTextLabel" parent="."]
visible = false
margin_left = 397.0
margin_top = 17.0
margin_right = 606.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 499, -85 )
custom_colors/default_color = Color( 0.286275, 0.85098, 0.231373, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "Aguardando ajustes..."
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Slider4" type="HSlider" parent="."]
visible = false
margin_left = 163.0
margin_top = 308.0
margin_right = 267.0
margin_bottom = 324.0
min_value = -50.0
max_value = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slider3" type="HSlider" parent="."]
visible = false
margin_left = 43.0
margin_top = 308.0
margin_right = 147.0
margin_bottom = 324.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slider2" type="HSlider" parent="."]
visible = false
margin_left = 163.0
margin_top = 268.0
margin_right = 267.0
margin_bottom = 284.0
min_value = -50.0
max_value = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slider1" type="HSlider" parent="."]
visible = false
margin_left = 43.0
margin_top = 268.0
margin_right = 147.0
margin_bottom = 284.0
min_value = -50.0
max_value = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Satellite4" type="Sprite" parent="."]
visible = false
position = Vector2( 290, 68 )
texture = ExtResource( 7 )

[node name="Satellite3" type="Sprite" parent="."]
visible = false
position = Vector2( 212, 199 )
texture = ExtResource( 6 )

[node name="Satellite2" type="Sprite" parent="."]
visible = false
position = Vector2( 151, 49 )
texture = ExtResource( 5 )

[node name="Satellite1" type="Sprite" parent="."]
visible = false
position = Vector2( 80, 72 )
texture = ExtResource( 2 )

[node name="Task_finished" type="Sprite" parent="."]
visible = false
position = Vector2( 317, 183 )
texture = ExtResource( 3 )

[node name="Task_finished_close_button" type="Button" parent="."]
visible = false
show_behind_parent = true
margin_left = 468.0
margin_top = 137.0
margin_right = 493.0
margin_bottom = 164.0
disabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Earned_score" type="RichTextLabel" parent="."]
visible = false
margin_left = 229.0
margin_top = 194.0
margin_right = 481.0
margin_bottom = 218.0
rect_pivot_offset = Vector2( -250, -36 )
custom_colors/default_color = Color( 0.286275, 0.85098, 0.231373, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "+50 pontos
+5 moedas"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score_congratulations_message" type="RichTextLabel" parent="."]
visible = false
margin_left = 229.0
margin_top = 154.0
margin_right = 481.0
margin_bottom = 195.0
rect_pivot_offset = Vector2( -250, -36 )
custom_colors/default_color = Color( 1, 0.898039, 0.141176, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "Parabéns! Você completou mais uma tarefa. 
Os sistemas de internet das coisas da cidade inteligente voltaram a funcionar normalmente."
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Control/Next_button" to="." method="_on_Next_button_pressed"]
[connection signal="pressed" from="Control/Start_transmission_button" to="." method="_on_Start_transmission_button_pressed"]
[connection signal="pressed" from="Control/Close_button" to="." method="_on_Close_button_pressed"]
[connection signal="frame_changed" from="Background" to="." method="_on_Background_frame_changed"]
[connection signal="value_changed" from="Slider4" to="." method="_on_Slider4_value_changed"]
[connection signal="value_changed" from="Slider3" to="." method="_on_Slider3_value_changed"]
[connection signal="value_changed" from="Slider2" to="." method="_on_Slider2_value_changed"]
[connection signal="value_changed" from="Slider1" to="." method="_on_Slider1_value_changed"]
[connection signal="pressed" from="Task_finished_close_button" to="." method="_on_Task_finished_close_button_pressed"]
